# bookclubinho

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  DEPLOY.md  GETTING_STARTED.md  Makefile  README.md  render.yaml  skills-lock.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  commit_msg.txt  main.py  pyproject.toml  railway.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_email_verified.py  0003_add_username_lower_index.py  0004_add_groups.py  0005_add_rls_policies.py  0006_fix_groups_schema.py  0007_rls_uuid_cast_optimization.py  0008_fix_rls_admin_update_policies.py  0009_add_rounds_tables.py  0010_add_hardcover_slug_and_book_reviews.py  0011_add_reading_progress.py  0012_add_reading_sessions_and_progress_fields.py  0013_add_chat_tables.py  0014_add_meetings_tables.py  0015_expand_book_reviews.py  0016_add_badges_and_user_badges.py  0017_add_hall_of_quotes.py  0018_add_wrapped_reports.py  0019_add_user_sessions_and_sync_toggle.py  0020_backfill_founder_badges.py  0021_add_audit_log.py  0022_add_reports_and_message_hidden.py
backend/app/core/: config.py  constants.py  cookies.py  database_url.py  deps.py  exceptions.py  genres_config.py  logging.py  redis.py  rls.py  security.py  version.py
backend/app/db/: engine.py  seed.py
backend/app/schemas/: __init__.py  account.py  auth.py  badge.py  group.py  hardcover.py  integration.py  media.py  meeting.py  message.py  notification.py  onboarding.py  privacy.py  quote.py  reading_progress.py  reading_session.py  report.py  review.py  round.py  session.py  (+4 more)
backend/config/: genres.yml
backend/scripts/: backfill_genres.py
backend/tests/: conftest.py  test_typing.py
(+528 files in other folders)
