[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookclub-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # DB
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Auth / Security
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "itsdangerous>=2.2.0",

    # Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # Cache / Realtime
    "redis>=5.2.0",
    "upstash-redis>=1.3.0",

    # HTTP / External APIs
    "httpx>=0.28.0",

    # Storage (R2/S3)
    "boto3>=1.35.0",
    "Pillow>=11.0.0",
    "qrcode[pil]>=8.0",

    # Email
    "resend>=2.4.0",

    # Rate limiting
    "slowapi>=0.1.9",

    # Sanitization
    "bleach>=6.2.0",

    # Logging
    "structlog>=24.4.0",

    # Utils
    "PyYAML>=6.0",
    "python-dotenv>=1.0.1",
    "orjson>=3.10.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
